force-app/main/default/objects/Additional_Charge_Shadow__c/Additional_Charge_Shadow__c.object-meta.xml
<CustomObject>
    <description>Used for reporting purposes only, to report on assets attached to an additional charge and their stock items.</description>
    <label>Additional Charge Shadow</label>
    <nameField>
        <displayFormat>ACS-{00000}</displayFormat>
        <label>Additional Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Charges Shadow</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>