force-app/main/default/objects/Additional_Charge_Shadow__c/fields/AC_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>AC_CreatedDate__c</fullName>
    <description>Additional Charge CreatedDate</description>
    <label>AC CreatedDate</label>
    <type>DateTime</type>
</CustomField>