force-app/main/default/objects/Additional_Charge_Shadow__c/fields/AC_Name__c.field-meta.xml
<CustomField>
    <fullName>AC_Name__c</fullName>
    <description>Additional Charge Name</description>
    <label>AC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>