force-app/main/default/objects/Additional_Charge_Shadow__c/fields/AC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>AC_Start_Date__c</fullName>
    <label>AC Start Date</label>
    <type>Date</type>
</CustomField>