force-app/main/default/objects/Additional_Charge_Shadow__c/fields/AC_Status__c.field-meta.xml
<CustomField>
    <fullName>AC_Status__c</fullName>
    <label>AC Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>