force-app/main/default/objects/Additional_Charge_Shadow__c/fields/AC_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>AC_Termination_Date__c</fullName>
    <description>Additional Charge Termination Date</description>
    <label>AC Termination Date</label>
    <type>Date</type>
</CustomField>