force-app/main/default/objects/Additional_Charge_Shadow__c/fields/AC_Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>AC_Termination_Reason__c</fullName>
    <description>Additional Charge Termination Reason</description>
    <label>AC Termination Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>