force-app/main/default/objects/Additional_Charge_Shadow__c/fields/AC_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>AC_Total_Amount__c</fullName>
    <description>Additional Charge Fee (Charge Fee)</description>
    <label>AC Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>