force-app/main/default/objects/Additional_Charge_Shadow__c/fields/Account_Company_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Company_Number__c</fullName>
    <description>Account Company Number</description>
    <label>Account Company Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>