force-app/main/default/objects/Additional_Charge_Shadow__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <description>Account Id</description>
    <label>Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>