force-app/main/default/objects/Additional_Charge_Shadow__c/fields/Additional_Charge__c.field-meta.xml
<CustomField>
    <fullName>Additional_Charge__c</fullName>
    <description>Additional Charge Link</description>
    <label>Additional Charge</label>
    <referenceTo>Additional_Charges__c</referenceTo>
    <relationshipName>Additional_Charges_Shadow</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>