force-app/main/default/objects/Additional_Charge_Shadow__c/fields/Asset_Bill_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Bill_Number__c</fullName>
    <description>Bill Number</description>
    <label>Asset Bill Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>