force-app/main/default/objects/Additional_Charge_Shadow__c/fields/Asset_Charge_Free__c.field-meta.xml
<CustomField>
    <fullName>Asset_Charge_Free__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset Charge Free</label>
    <type>Checkbox</type>
</CustomField>