force-app/main/default/objects/Additional_Charge_Shadow__c/fields/Asset_Date_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Asset_Date_Shipped__c</fullName>
    <description>Asset Date Shipped</description>
    <label>Asset Date Shipped</label>
    <type>Date</type>
</CustomField>