force-app/main/default/objects/Additional_Charge_Shadow__c/fields/Asset_First_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Asset_First_Payment_Date__c</fullName>
    <description>First Payment Date for a Stock item</description>
    <label>Asset First Payment Date</label>
    <type>Date</type>
</CustomField>