force-app/main/default/objects/Additional_Charge_Shadow__c/fields/Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>Asset_Id__c</fullName>
    <description>Asset Id</description>
    <label>Asset Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>