force-app/main/default/objects/Additional_Charge_Shadow__c/fields/Asset_Return_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Asset_Return_Due_Date__c</fullName>
    <description>Asset Return Due Date</description>
    <label>Asset Return Due Date</label>
    <type>Date</type>
</CustomField>