force-app/main/default/objects/Additional_Charge_Shadow__c/fields/Asset_Return_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Return_Status__c</fullName>
    <label>Asset Return Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>