force-app/main/default/objects/Additional_Charge_Shadow__c/fields/Asset_Returning_Stock_Item_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Asset_Returning_Stock_Item_Serial_No__c</fullName>
    <label>Asset Returning Stock Item Serial No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>