force-app/main/default/objects/Additional_Charge_Shadow__c/fields/Asset_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Status__c</fullName>
    <description>Asset Status</description>
    <label>Asset Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>