force-app/main/default/objects/Additional_Charge_Shadow__c/fields/Cancellation_Fee_Charge_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fee_Charge_Date__c</fullName>
    <description>KR field for Asset .</description>
    <label>Cancellation Fee Charge Date</label>
    <type>Date</type>
</CustomField>