force-app/main/default/objects/Additional_Charge_Shadow__c/fields/Charge_Cancellation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Charge_Cancellation_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge Cancellation Fee</label>
    <type>Checkbox</type>
</CustomField>