force-app/main/default/objects/Additional_Charge_Shadow__c/fields/Stock_Item_Condition__c.field-meta.xml
<CustomField>
    <fullName>Stock_Item_Condition__c</fullName>
    <label>Stock Item Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>