force-app/main/default/objects/Additional_Charge_Shadow__c/fields/Stock_Item_SIM_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Stock_Item_SIM_Mobile_Number__c</fullName>
    <label>Stock Item SIM Mobile Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>