force-app/main/default/objects/Additional_Charge_Shadow__c/fields/Stock_Item_Stage__c.field-meta.xml
<CustomField>
    <fullName>Stock_Item_Stage__c</fullName>
    <label>Stock Item Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>