force-app/main/default/objects/Additional_Charge_Shadow__c/fields/StockItem_Id__c.field-meta.xml
<CustomField>
    <fullName>StockItem_Id__c</fullName>
    <description>Stock Item Id</description>
    <label>StockItem Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>