force-app/main/default/objects/Additional_Charge_Shadow__c/fields/StockItem_Name__c.field-meta.xml
<CustomField>
    <fullName>StockItem_Name__c</fullName>
    <description>Stock Item Name</description>
    <label>StockItem Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>