force-app/main/default/objects/Additional_Charge_Shadow__c/fields/StockItem_Simcard_Number__c.field-meta.xml
<CustomField>
    <fullName>StockItem_Simcard_Number__c</fullName>
    <description>Stock Item Simcard Number</description>
    <label>StockItem Simcard Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>