force-app/main/default/objects/Additional_Charge_Shadow__c/recordTypes/AT_Add_l_Charge_Shadow.recordType-meta.xml
<RecordType>
    <fullName>AT_Add_l_Charge_Shadow</fullName>
    <active>true</active>
    <label>AT Add&apos;l Charge Shadow</label>
</RecordType>