force-app/main/default/objects/Additional_Charge_Shadow__c/recordTypes/CD_Add_l_Charge_Shadow.recordType-meta.xml
<RecordType>
    <fullName>CD_Add_l_Charge_Shadow</fullName>
    <active>true</active>
    <label>CD Add&apos;l Charge Shadow</label>
</RecordType>