force-app/main/default/objects/Additional_Charge_Shadow__c/recordTypes/DE_Add_l_Charge_Shadow.recordType-meta.xml
<RecordType>
    <fullName>DE_Add_l_Charge_Shadow</fullName>
    <active>true</active>
    <label>DE Add&apos;l Charge Shadow</label>
</RecordType>