force-app/main/default/objects/Additional_Charge_Shadow__c/recordTypes/DH_AU_Add_l_Charge_Shadow.recordType-meta.xml
<RecordType>
    <fullName>DH_AU_Add_l_Charge_Shadow</fullName>
    <active>true</active>
    <label>DH_AU Add&apos;l Charge Shadow</label>
</RecordType>