force-app/main/default/objects/Additional_Charge_Shadow__c/recordTypes/FI_Add_l_Charge_Shadow.recordType-meta.xml
<RecordType>
    <fullName>FI_Add_l_Charge_Shadow</fullName>
    <active>true</active>
    <label>FI Add&apos;l Charge Shadow</label>
</RecordType>