force-app/main/default/objects/Additional_Charge_Shadow__c/recordTypes/HU_Add_l_Charge_Shadow.recordType-meta.xml
<RecordType>
    <fullName>HU_Add_l_Charge_Shadow</fullName>
    <active>true</active>
    <description>Hungary Add&apos;l Charge Shadow</description>
    <label>HU Add&apos;l Charge Shadow</label>
</RecordType>