force-app/main/default/objects/Additional_Charge_Shadow__c/recordTypes/SE_Add_l_Charge_Shadow.recordType-meta.xml
<RecordType>
    <fullName>SE_Add_l_Charge_Shadow</fullName>
    <active>true</active>
    <label>SE Add&apos;l Charge Shadow</label>
</RecordType>