force-app/main/default/objects/Additional_Charge_Shadow__c/recordTypes/Talabat_Add_l_Charge_Shadow.recordType-meta.xml
<RecordType>
    <fullName>Talabat_Add_l_Charge_Shadow</fullName>
    <active>true</active>
    <label>Talabat Add&apos;l Charge Shadow</label>
</RecordType>