force-app/main/default/objects/Additional_Charge_Shadow__c/recordTypes/UK_Add_l_Charge_Shadow.recordType-meta.xml
<RecordType>
    <fullName>UK_Add_l_Charge_Shadow</fullName>
    <active>true</active>
    <label>UK Add&quot;l Charge Shadow</label>
</RecordType>