force-app/main/default/objects/Additional_Charge_Shadow__c/recordTypes/Yogiyo_Add_l_Charge_Shadow.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_Add_l_Charge_Shadow</fullName>
    <active>true</active>
    <label>Yogiyo Add&apos;l Charge Shadow</label>
</RecordType>